<resources>
    <string name="app_name">Mạng xã hội cho cư dân</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_toolbar_add">Tạo bài viết</string>
    <string name="content_post_add">Bạn đang nghĩ gì?</string>
    <string name="title_post_add">Tiêu đề bài viết</string>
    <string name="txt_username">Diệu Nguyễn</string>
    <string name="txt_title_post_list">Konichiwa</string>
    <string name="txt_content_post_list">Watashi wa Diệu desu. PTIT daigaku no gakusei desu. Douzo zoroshiku o negaishimasu.</string>
    <string name="txt_time_posted">Just now</string>
    <string name="home_toolbar_title">Apartment</string>
    <string name="wellcome_app">Welcome</string>
    <string name="title_activity_add_post">AddPostActivity</string>
    <string name="setting_profie_username">Dieu Nguyen</string>
    <string name="setting_profie_des">Thích là nhích</string>
    <string name="setting_profie_btn_next">Bước tiếp theo</string>
    <string name="label_phone_setting_information">Điện thoại di động</string>
    <string name="label_birthday_setting_information">Ngày sinh</string>
    <string name="label_gender_setting_information">Giới tính</string>
    <string name="radio_button_male">Nam</string>
    <string name="radio_button_female">Nữ</string>
    <string name="radio_button_other_gender">LGBT</string>
    <string name="label_date_setting_information">Ngày sinh</string>
    <string name="label_year_setting_information">Năm sinh</string>
    <string name="setting_information_btn_save">Lưu</string>
    <string name="activity_register_signup_with_google">Sign up with google</string>
    <string name="activity_login_with_facebook">Login with Facebook</string>
    <string name="fragment_profile_edit_profile">Chỉnh sửa thông tin cá nhân</string>
    <string name="fragment_profile_change_password">Thay đổi mật khẩu</string>
    <string name="dialog_change_password_title">Thay đổi mật khẩu</string>
    <string name="dialog_change_password_edt_pass_current">Mật khẩu hiện tại</string>
    <string name="dialog_change_password_edt_pass_new">Mật khẩu mới</string>
    <string name="dialog_change_password_edt_repass_new">Nhập lại mật khẩu mới</string>
    <string name="dialog_change_password_btn_save">Lưu</string>
    <string name="txt_image_video">Ảnh/Video</string>
    <string name="txt_take_camera">Máy ảnh</string>
    <string name="txt_background_post">Màu nền</string>
    <string name="activity_add_post_btn_post">Đăng bài</string>
    <string name="item_list_txt_location">Phòng 203</string>
    <string name="label_room_setting_information">Số phòng</string>
    <string name="profile_txt_update">Chỉnh sửa thông tin cá nhân</string>
    <string name="profile_txt_change_password">Thay đổi mật khẩu</string>
    <string name="text_btn_choose_image_add_post">Ảnh/Video</string>
    <string name="text_btn_take_image_add_photo">Máy ảnh</string>
    <string name="title_toolbar_add_post">Thêm bài viết</string>
    <string name="table_name_post">Post</string>
    <string name="table_name_user">Users</string>
    <string name="avatarUrl_table_users">avatarUrl</string>
    <string name="username_table_users">username</string>
    <string name="des_table_users">des</string>
    <string name="phoneNumber_table_users">phoneNumber</string>
    <string name="gender_table_users">gender</string>
    <string name="dateOfBirth_table_users">dateOfBirth</string>
    <string name="userId_table_post">userId</string>
    <string name="count_like_item_post">12</string>
    <string name="txt_like_item_post">Thích</string>
    <string name="txt_comment_item_post">Bình luận</string>
    <string name="txt_date">Date</string>
    <string name="txt_time">Time</string>
    <string name="txt_status">đã đăng bài lúc  </string>
    <string name="txt_follow">Follow</string>
    <string name="txt_des">Hello ^^</string>
    <string name="des_app">Mạng xã hội cho cư dân</string>
    <string name="txt_edit_profile">Chỉnh sửa thông tin cá nhân</string>
    <string name="txt_change_password">Thay đổi mật khẩu</string>
    <string name="txt_delete_post">Xóa bài đăng</string>
    <string name="txt_edit_post">Sửa bài đăng</string>
    <string name="txt_update_cover_photo">Cập nhật ảnh bìa</string>
    <string name="txt_update_avatar_dialog">Cập nhật ảnh đại diện</string>
    <string name="label_username">Tên người dùng</string>
    <string name="label_des">Mô tả/Trích dẫn yêu thích</string>
    <string name="title_toolbar_update_profile">Chỉnh sửa thông tin cá nhân</string>
    <string name="btn_add_main">Bạn đang nghĩ gì?</string>
    <string name="txt_forgot_password">Quên mật khẩu?</string>
    <string name="txt_reset_password">Hãy nhập email của bạn.</string>
    <string name="txt_email">dieu@gmail.com</string>
    <string name="txt_btn_send_email">Send email</string>
    <string name="title_chat_profile_other">Nhắn tin</string>
    <string name="title_requestfriend_profile_other">Kết bạn</string>
    <string name="txt_nameroom">Phòng </string>
    <string name="txt_numberoom">201</string>
    <string name="title_cancel_requestfriend_profile_other">Hủy kết bạn</string>
    <string name="title_list_request_friend">Lời mới kết bạn</string>
    <string name="title_list_friend">Bạn bè</string>
    <string name="txt_unfriend">Hủy kết bạn</string>
    <string name="txt_add_comment">Thêm bình luận ...</string>
    <string name="txt_reply_item_post">Trả lời</string>
    <string name="txt_time_item_post">1 giờ</string>
    <string name="txt_delete_item_post">Xóa</string>
    <string name="txt_add_message">Nhập ...</string>
    <string name="txt_accept">Chấp nhận</string>
    <string name="txt_delete">Xóa</string>
    <string name="txt_result_friend">Hai bạn đã trở thành bạn bè.</string>
    <string name="txt_list_chat">Danh sách chat</string>
    <string name="txt_operating_status">Danh sách trò chuyện</string>
    <string name="txt_seen">Đã xem</string>
    <string name="username_admin">admin@gmail.com</string>
    <string name="password_admin">admin123</string>
    <string name="txt_information_user">Thông tin cơ bản</string>
    <string name="txt_phone_number_demo">087834232</string>
    <string name="txt_notify_from_manager">Thông báo từ ban quản lý</string>
    <string name="txt_notify_from_friend">Thông báo từ bạn bè</string>
    <string name="txt_manager">Ban quản lý</string>
    <string name="label_hotline_setting_profile_manager">Hotline:</string>
    <string name="label_location_setting_profile_manager">Phòng BQL:</string>
    <string name="txt_location_manager">Phòng 503, Tầng 5, Khu chung cư ABC</string>
    <string name="txt_create_notification">Tạo thông báo</string>
    <string name="txt_create_event">Tạo sự kiện</string>
    <string name="txt_information_manager">Thông tin ban quản lý</string>
    <string name="txt_create_phan_anh">Tạo phản ánh</string>
    <string name="label_field_reflect">Lĩnh vực phản ánh</string>
    <string name="txt_all">Tất cả</string>
    <string name="txt_protect">Bảo vệ</string>
    <string name="txt_technology">Kỹ thuật</string>
    <string name="txt_toire">Vệ sinh</string>
    <string name="txt_add_image">Thêm ảnh</string>
    <string name="txt_content">Nội dung</string>
    <string name="txt_choose_image">Tải ảnh lên</string>
    <string name="edt_enter_title">Nhập tiêu đề ...</string>
    <string name="edt_enter_content">Nhập nội dung thông báo ...</string>
    <string name="create">Tạo thông báo</string>
    <string name="txt_name_event">Tên sự kiện</string>
    <string name="txt_location_event">Địa điểm tổ chức</string>
    <string name="txt_des_event">Giới thiệu về sự kiện</string>
    <string name="txt_start">Bắt đầu</string>
    <string name="txt_finish">Kết thúc</string>
    <string name="txt_date_start">Ngày bắt đầu</string>
    <string name="txt_date_finish">Ngày kết thúc</string>
    <string name="txt_time_start">Giờ bắt đầu</string>
    <string name="txt_time_finish">Giờ kết thúc</string>
    <string name="txt_enter_email">Email</string>
    <string name="txt_enter_password">Mật khẩu</string>
    <string name="txt_enter_repassword">Nhập lại mật khẩu</string>
    <string name="label_person_care_event">Những người quan tâm sự kiện:</string>
    <string name="label_person_join_event">Những người tham gia sự kiện</string>
    <string name="all_comment">Tất cả bình luận</string>
    <string name="txt_list_reflect_wait_progress">Chờ xử lý</string>
    <string name="txt_list_reflect_received">Đã tiếp nhận</string>
    <string name="txt_list_reflect_progressed">Đã xử lý</string>
    <string name="txt_creat_election">Tạo bầu cử</string>
    <string name="year">Năm bầu cử</string>
    <string name="label_create_candidate">Tạo danh sách ứng cử viên</string>
    <string name="count">Số lượng</string>
    <string name="lable_name">Họ và tên</string>
    <string name="label_address_apartment_create_cadicate">Địa chỉ căn hộ</string>
    <string name="label_job_create_cadicate">Nghề nghiệp hiện nay</string>
    <string name="label_year_start_create_cadicate">Bắt đầu sống ở chung cư từ năm?</string>
    <string name="label_slogan_create_cadicate">Tiêu chí hành động nếu được bầu</string>
    <string name="txt_create_candicate">Thêm vào danh sách</string>
    <string name="label_job">Nghề nghiệp hiện tại</string>
    <string name="intro_create_eletion">Giới thiệu nội dung bầu cử</string>
    <string name="date_finish_election">Ngày kết thúc bầu cử</string>
    <string name="date_start_create_election">Ngày bắt đầu bầu cử</string>
    <string name="title_election">Tiêu đề cuộc bầu cử</string>
    <string name="count_current_current">Đã tạo</string>
    <string name="candidate">UCV</string>


    <array name="name_room">
        <item>101</item>
        <item>102</item>
        <item>104</item>
        <item>105</item>
        <item>106</item>
        <item>107</item>
        <item>108</item>
        <item>109</item>
        <item>110</item>
        <item>201</item>
        <item>202</item>
        <item>204</item>
        <item>205</item>
        <item>206</item>
        <item>207</item>
        <item>208</item>
        <item>209</item>
        <item>210</item>
        <item>301</item>
        <item>302</item>
        <item>304</item>
        <item>305</item>
        <item>306</item>
        <item>307</item>
        <item>308</item>
        <item>309</item>
        <item>310</item>
    </array>


</resources>