<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".resident.homeapp.setting_info_profile.SettingInformationProfileActivity">

    <include layout="@layout/layout_app_bar" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_10dp"
        android:layout_marginTop="@dimen/setting_infomation_label_phone"
        android:text="@string/label_phone_setting_information"
        android:textColor="@color/color_Background"
        android:textSize="@dimen/txt_size_18sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_10dp"
        app:boxStrokeColor="@color/color_Background">

        <com.google.android.material.textfield.TextInputEditText
            android:inputType="number"
            android:id="@+id/edt_phone_setting_information"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_10dp"
        android:text="@string/label_gender_setting_information"
        android:textColor="@color/color_Background"
        android:textSize="@dimen/txt_size_18sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/radio_group_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/margin_5dp">

        <RadioButton

            android:id="@+id/radio_btn_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_button_male" />

        <RadioButton
            android:id="@+id/radio_btn_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_20dp"
            android:text="@string/radio_button_female" />

        <RadioButton
            android:id="@+id/radio_btn_other"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_20dp"
            android:text="@string/radio_button_other_gender" />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_10dp"
        android:layout_marginTop="@dimen/setting_infomation_label_phone"
        android:text="@string/label_birthday_setting_information"
        android:textColor="@color/color_Background"
        android:textSize="@dimen/txt_size_18sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_10dp"
        app:boxStrokeColor="@color/color_Background">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/setting_information_txt_birthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/ic_event_black_24dp" />
    </com.google.android.material.textfield.TextInputLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_10dp"
            android:text="@string/label_room_setting_information"
            android:textColor="@color/color_Background"
            android:textSize="@dimen/txt_size_18sp"
            android:textStyle="bold" />

        <Spinner
            android:layout_marginLeft="@dimen/margin_20dp"
            android:id="@+id/spinner_name_room_setting_information"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></Spinner>

    </LinearLayout>

    <Button
        android:layout_marginTop="@dimen/margin_20dp"
        android:id="@+id/btn_save_setting_information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/bg_btn"
        android:text="@string/setting_information_btn_save" />
</LinearLayout>