<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".reset_password.ForgotPasswordActivity">

    <include layout="@layout/layout_app_bar" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/size_100dp"
        android:text="@string/txt_reset_password"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:textColorHint="@color/color_Background"
        android:id="@+id/edt_email_reset_pass"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_50dp"
        android:layout_margin="@dimen/size_50dp"
        android:background="@color/colorWhite"
        android:ems="10"
        android:hint="@string/txt_email"
        android:inputType="textPersonName"

        />

    <Button
        android:id="@+id/btn_send_email_reset_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/bg_btn"
        android:text="@string/txt_btn_send_email"
        android:textAllCaps="false"
        tools:layout_editor_absoluteX="131dp"
        tools:layout_editor_absoluteY="285dp" />


</LinearLayout>