<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_avatar_home" />

            <LinearLayout
                android:layout_marginLeft="5dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textColor="@color/colorBlack"
                    android:id="@+id/txt_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_username"
                    android:textSize="@dimen/txt_username_post" />
                <TextView
                    android:id="@+id/txt_time_posted"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_time_posted"
                    android:textSize="@dimen/txt_time_posted" />
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/txt_title_post_list"
                android:id="@+id/txt_title_post_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_marginTop="5dp"
                android:layout_below="@+id/txt_title_post_list"
                android:text="@string/txt_content_post_list"
                android:id="@+id/txt_content_post_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/txt_content_post_list"
                android:layout_marginTop="-2dp" />
        </RelativeLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>