<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/color_gray"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_50dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/dialog_change_password_title"
        android:textSize="@dimen/txt_username_setting_profile"
        android:textStyle="bold" />

    <LinearLayout
        android:padding="@dimen/margin_5dp"
        android:background="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_10dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:textColorHint="@color/color_Background"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dialog_change_password_edt_pass_current"
            app:boxStrokeColor="@color/color_Background">

            <com.google.android.material.textfield.TextInputEditText
                android:inputType="textPassword"
                android:id="@+id/dialog_changepw_edt_pass_current"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:textColorHint="@color/color_Background"
            android:layout_marginTop="@dimen/margin_15dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dialog_change_password_edt_pass_new"
            app:boxStrokeColor="@color/color_Background">

            <com.google.android.material.textfield.TextInputEditText
                android:inputType="textPassword"
                android:id="@+id/dialog_changepw_edt_pass_new"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:textColorHint="@color/color_Background"
            android:layout_marginTop="@dimen/margin_15dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dialog_change_password_edt_repass_new"
            app:boxStrokeColor="@color/color_Background">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dialog_changepw_edt_repass_new"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <Button
        android:layout_marginTop="@dimen/margin_15dp"
        android:id="@+id/dialog_changepw_btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/margin_5dp"
        android:background="@drawable/bg_btn"
        android:text="@string/dialog_change_password_btn_save" />
</LinearLayout>